[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.mypy]
show_column_numbers = true
show_error_codes = true

warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages-control]
disable = [
  "logging-fstring-interpolation",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-self-use",
  "protected-access",
  "too-few-public-methods"
]
